# note-pro-zhiji

./: .env  .gitignore  README.md  README_EN.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build-tauri.yml  ci.yml  deploy-web.yml
docs/: openclaw-integration.md
scripts/: build-icons.mjs  set-version-from-tag.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build-frontend.mjs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_monitor.rs  lib.rs  main.rs
src/components/: AppLogo.tsx  CtaSection.tsx  FeatureSection.tsx  Footer.tsx  HeroSection.tsx  Navbar.tsx  StatsSection.tsx  TestimonialsSection.tsx
src/components/ui/: card.tsx  input.tsx
src/hooks/: useAiConfig.ts  useAuth.tsx  useChatConversations.ts  useDocumentImport.ts  useFolders.ts  useNotes.ts  usePwaUpdate.ts  useRecentNotes.ts  useSpeechRecognition.ts  useTags.ts  useTauriUpdate.ts  useUserRole.ts  useWorkflow.ts
src/lib/: activityMonitor.ts  aiProviderSettings.ts  codeRunner.ts  fontSizeExtension.ts  languageDetector.ts  listItemFontSizeExtension.ts  localChatStorage.ts  localNotesStorage.ts  noteLinkExtension.ts  noteVersions.ts  orderedListMarkerFont.test.ts  orderedListMarkerFont.ts  orderedListStyleExtension.ts  tauriAuth.ts
src/pages/: Admin.tsx  Auth.tsx  DesktopAuthCallback.tsx  Index.tsx  ResetPassword.tsx  SharedNote.tsx  Upgrade.tsx  Workspace.tsx
supabase/: config.toml
supabase/migrations/: 20260312152546_d3486963-1a60-4cb3-8cef-6eb63cf10bda.sql  (+13 more)
(+34 files in other folders)
