[package]
name = "smartnote"
version = "1.0.4"
description = "智记AI - 智能笔记应用"
authors = ["you"]
edition = "2021"

[lib]
name = "smartnote_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
